# fission-benchmark

./: .gitignore  README.md  docker-compose.local.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.tsbuildinfo  vercel.json
app/: dashboard.module.css  error.tsx  globals.css  layout.tsx  page.module.css  page.tsx
benchmark/: KNOWN_ISSUES.md  README.md  __init__.py
components/: CfgSecondaryPanel.tsx  CorePairPanel.tsx  CrossVariantTable.tsx  DashboardShared.tsx  DualMetricsTiles.tsx  FunctionGrid.module.css  FunctionGrid.tsx  HirGhidraCompare.module.css  HirGhidraCompare.tsx  NirHirCompare.module.css  NirHirCompare.tsx  ParityStageTable.tsx  ReadabilityDiagnosticsPanel.tsx  ReleaseComparisonPanel.module.css  ReleaseComparisonPanel.tsx  SameFunctionPanel.tsx  SiteChrome.tsx  SpeedPanel.tsx  SummaryTable.module.css  SummaryTable.tsx  UnavailableData.tsx  ValidityBanner.module.css  ValidityBanner.tsx  VersionTrendChart.module.css  VersionTrendChart.tsx
corpus/: README.md  source_metrics.json
docs/: BENCHMARK_OPERATING.md  NEXT_BENCHMARK_IDEAS.md  index.html
lib/: benchmark.ts  history.ts  parity.ts  schemas.ts  source.ts  speed.ts
public/: benchmark-latest.json  parity-telemetry.json
results/: 20260701_152550.json  20260701_153415.json  20260701_160417.json  artifact-manifest.json  dev_latest.json  dev_publish.json  holdout_latest.json  latest-summary.json  latest.json  latest.md  overfitting_report.json  overfitting_report.md  publication-verdict.json
runner/: artifact_integrity.py  bare_compile.py  corpus.py  graph_utils.py  (+21 more)
(+242 files in other folders)
