[project]
name = "fission-benchmark"
version = "0.1.0"
description = "Multi-decompiler comparison benchmark: Fission vs Ghidra, Boomerang, Radare2, and others"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "jsonschema>=4.23",
    "pycparser>=2.22",
    "requests>=2.32",
    "rich>=13.0",
    "typer>=0.12",
    "zss>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["benchmark", "runner"]

[tool.ruff]
line-length = 100
